[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-unhcr"
version = "0.1.0"
authors = [
  { name="Luis Alfredo Chaparro Gomez", email="luischaparrog@gmail.com" },
]
description = "Wrapper for the public UNHCR API, with built-in functions to make things easier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/chapig/py-unhcr"
"Bug Tracker" = "https://github.com/chapig/py-unhcr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_unhcr"]